# kvpaxos

./: .gitmodules  CMakeLists.txt  README.md  a_conf_0_ckp.toml  a_conf_1_ckp.toml  a_conf_8_ckp.toml  a_conf_8_ckp_metis.toml  a_results_0_ckp.csv  a_results_1_ckp.csv  a_results_8_ckp.csv  a_results_8_ckp_metis.csv  compile.sh  conf.toml  conf_0_ckp.toml  conf_1_ckp.toml  conf_8_ckp.toml  conf_8_ckp_metis.toml  conf_metis.toml  conf_rr.toml  d_conf_0_ckp.toml  d_conf_1_ckp.toml  d_conf_8_ckp.toml  d_conf_8_ckp_metis.toml  d_results_0_ckp.csv  d_results_1_ckp.csv  d_results_8_ckp.csv  d_results_8_ckp_metis.csv  e_conf_0_ckp.toml  e_conf_1_ckp.toml  e_conf_8_ckp.toml  e_conf_8_ckp_metis.toml  e_results_0_ckp.csv  e_results_1_ckp.csv  e_results_8_ckp.csv  e_results_8_ckp_metis.csv  execute_all.sh
plotting/: checkpoint_sizes.gnuplot  checkpoint_times.gnuplot  crossborder.gnuplot  distribution.gnuplot  makespan.gnuplot  throughput.gnuplot  ycsb_A_ckp_sizes  ycsb_A_ckp_sizes.csv  ycsb_A_ckp_times.csv  ycsb_A_distribution.csv  ycsb_A_makespan.csv  ycsb_A_throughput.csv  ycsb_D_ckp_sizes.csv  ycsb_D_ckp_times.csv  ycsb_D_distribution.csv  ycsb_D_makespan.csv  ycsb_D_throughput.csv  ycsb_E_ckp_sizes.csv  ycsb_E_ckp_times.csv  ycsb_E_crossborder.csv  ycsb_E_makespan.csv  (+2 more)
src/: CMakeLists.txt  replica.cpp
src/graph/: graph.hpp  partitioning.cpp  partitioning.h
src/request/: CMakeLists.txt  request_generation.cpp  request_generation.h
src/scheduler/: checkpointer.cpp  checkpointer.hpp  partition.hpp  scheduler.hpp
src/storage/: storage.cpp  storage.h
src/types/: types.h
(+2 files in other folders)
